<resources>
    <string name="app_name">DSV Fitness</string>
    <string name="img_desc">Img Desc</string>
    <string name="get_started">Get Started</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="level">Level</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="exercises">Exercises</string>
    <string name="height_edit_text_hint">170 cm</string>
    <string name="weight_edit_text_hint">70 kg</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="please_choose_level">Please choose your level</string>
    <string name="done">Done</string>
    <string name="your_bmi_result_is">Your BMI result is:</string>
    <string name="total_amount">Total Amount is €5.99</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="credit_card_date">Credit Card Date</string>
    <string name="cvv">CVV</string>

    // BMI states
    <string name="severe_thinness">Severe Thinness</string>
    <string name="moderate_thinness">Moderate Thinness</string>
    <string name="mild_thinness">Mild Thinness</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Obese Class I</string>
    <string name="obese_class_ii">Obese Class II</string>
    <string name="obese_class_iii">Obese Class III</string>
</resources>