<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.GetStartedOrLoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/img_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/vertical_fitness_photo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/get_started_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="4sp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="14sp"
            app:cardElevation="6sp"
            app:contentPadding="14sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/get_started"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/login_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="4sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="10sp"
            app:cardBackgroundColor="@color/purple_700"
            app:cardCornerRadius="14sp"
            app:cardElevation="6sp"
            app:contentPadding="14sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</RelativeLayout>