<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.activities.GetStartedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="@string/height"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/height_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/edit_text_shape"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:hint="@string/height_edit_text_hint"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="16sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="@string/weight"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/weight_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/edit_text_shape"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:hint="@string/weight_edit_text_hint"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="16sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/level"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/level_drop_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/please_choose_level"
                android:padding="20sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold"
                app:fontFamily="@font/quicksand_bold"
                app:spinner_arrow_animate="true"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_padding="8sp"
                app:spinner_arrow_tint="@color/black"
                app:spinner_divider_show="false"
                app:spinner_item_array="@array/level_drop_down"
                app:spinner_popup_animation="dropdown"
                app:spinner_popup_background="@color/white"
                app:spinner_popup_elevation="8sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/done_button_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="14sp"
            app:cardElevation="6sp"
            app:contentPadding="14sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bmi_result_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bmi_status_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/signup_button_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="20sp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/purple_700"
                app:cardCornerRadius="14sp"
                app:cardElevation="6sp"
                app:contentPadding="14sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</ScrollView>